--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ defaults:
 banner:
 author: Denis Moulin
 firstname: Denis
-email: denis@denismoulin.com
+email: moulin.denis@gmail.com
 description: Portfolio of Designer Denis Moulin.
 baseurl: ''
 url: ''
